# Scs

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
Docs/: Changelog.md  Tutorial.docx
Docs/Tools/: GenerateDocs.cmd  ProcessDocs.cmd
Include/: Scs.hpp
Projects/Scs/Linux/Scs/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Projects/Scs/WinPC/Scs/: Scs.vcxproj  Scs.vcxproj.filters
Projects/Scs/macOS/Scs/Scs.xcodeproj/: project.pbxproj
Projects/ScsTest/Linux/ScsTest/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  project.xml
Projects/ScsTest/Project/Linux/ScsTest/nbproject/: Package-Debug.bash  Package-Release.bash  configurations.xml
Projects/ScsTest/Project/WinPC/ScsTest/: Scs.sln  ScsTest.vcxproj  ScsTest.vcxproj.filters
Projects/ScsTest/Project/macOS/ScsTest/ScsTest.xcodeproj/: project.pbxproj
Projects/ScsTest/Source/: ScsTest.cpp  TestClient.cmd  TestServer.cmd
Projects/ScsTest/WinPC/ScsTest/: ScsTest.sln  ScsTest.vcxproj  ScsTest.vcxproj.filters
Projects/UnitTests/WinPC/UnitTests/: UnitTests.sln  UnitTests.vcxproj  UnitTests.vcxproj.filters
Source/: Scs.cpp  Scs.h  ScsAddress.cpp  ScsAddress.h  ScsClient.cpp  ScsClient.h  ScsCommon.cpp  ScsCommon.h  ScsInternal.h  ScsReceiveQueue.cpp  ScsReceiveQueue.h  ScsSendQueue.cpp  ScsSendQueue.h  ScsServer.cpp  ScsServer.h  ScsSocket.cpp  ScsSocket.h
Tests/ScsFeature/: ScsFeature.cpp
Tests/ScsTest/: ScsTest.cpp
Tests/UnitTests/: Main.cpp  TestConnection.cpp  TestTransmission.cpp  catch.hpp
